# lumiflow-oss

./: LICENSE  README.md  compose.yaml  lumiflow-oss.code-workspace
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: backend.yml  frontend-snapshots.yml  frontend.yml  inference.yml  job-service.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  biome.jsonc  compose.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/dev-services/: compose.yaml  postgres.env
backend/scripts/: generate-client-types.sh  install-git-hooks.sh  pre-commit-biome.sh  pre-commit-generate-types.sh  pre-commit.sh
backend/src/: app.ts  entrypoint.ts  types.ts
docs/: 404.html  CNAME  index.html  styles.css
docs/assets/: banner-animation.js  (+2 more)
frontend/: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  biome.jsonc  next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitestSetup.ts
inference/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  example_eval_config.json  pyproject.toml  readme.md  ruff.toml  tox.ini
inference/.github/actions/lint/: action.yml
inference/.github/actions/test/: action.yml
inference/documentation/: aws.md  eval_service.md  gcp.md
inference/notebooks/: Models_demo.ipynb
inference/scripts/: install-git-hooks.sh
job-service/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json
scripts/: install-git-hooks.sh  pre-commit.sh
(+342 files in other folders)
